# ODA-Object-Detection-ttA

./: .gitignore  Example.ipynb  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_odach_yolo.py  test_odach_yolo_real.py  test_yolo_simple.py
.github/workflows/: .python-publish.yml.swp  python-publish.yml
nms/: nms.py  wbf.py
notebooks/: YOLO_INTEGRATION_README.md  example_yolo_usage.py  mask-rcnn-tta-dev.ipynb
odach/: __init__.py  nms.py  oda.py  wbf.py
ota/: ota.py
tests/: TEST_README.md  test_odach.py  test_odach_yolo.py  test_odach_yolo_real.py  test_yolo_debug.py
utils/: cococls.py
